# tag-helpers

./: .gitignore  LICENCE  Pipfile  README.md  TagLogsAndCues.py  Vagrantfile  computeSha1.sh  conversion.md  hk.pkl  manageTags.py  migrateAlbumArtist.py  mise.toml  printTags.py  pyproject.toml  requirements.txt  setup-python.sh  setup-ubuntu.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
TagLogsAndCues/: __init__.py  __main__.py
docs/superpowers/plans/: 2026-07-19-single-cli-subcommands.md
docs/superpowers/specs/: 2026-07-19-single-cli-subcommands-design.md
manageTags/: __init__.py  __main__.py
printTags/: __init__.py  __main__.py
tag_helpers/: __main__.py  check.py  cli.py  extract_pictures.py  manage_tags.py  operations.py  print_tags.py  repair_wav.py  riff.py  tag_logs_and_cues.py  tagfile.py
tests/: test_check.py  test_cli.py  test_extract_pictures.py  test_manage_tags.py  test_operations.py  test_print_tags.py  test_repair_wav.py  test_riff.py  test_tag_logs_and_cues.py  test_tagfile.py  wav_fixtures.py
