[project]
name = "tag-helpers"
version = "0.1.0"
description = "Scripts to help with tagging music files"
authors = [
	{ name = "Alex Palmer", email = "XanderXAJ@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"mutagen>=1.46.0",
	"atomicwrites>=1.4.1",
	"beautifulsoup4>=4.11.1",
]

[project.scripts]
TagLogsAndCues = "TagLogsAndCues:main"
manageTags = "manageTags:main"
printTags = "printTags:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
	"TagLogsAndCues",
	"manageTags",
	"printTags",
]
