[project]
name = "tag-helpers"
version = "0.1.0"
description = "Scripts to help with tagging music files"
authors = [
	{ name = "Alex Palmer", email = "XanderXAJ@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"mutagen>=1.48.1",
	"atomicwrites>=1.4.1",
	"beautifulsoup4>=4.15.0",
]

[project.scripts]
tag-helpers = "tag_helpers.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
	"tag_helpers",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
